--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         <input type="text" placeholder="Enter Your First Name" required />
                         <input type="text" placeholder="Enter Your Last Name" required />
                         <input type="email" placeholder="Enter Your Email" required />
-                        <input type="date" placeholder="Enter Your DOB" required />
+                        <label for="dob">Enter your Date Of Birth:</label>
+                        <input type="date" id="dob" placeholder="Enter Your DOB" required />
                         <select required>
                             <option value="" disabled selected>Select Your Gender</option>
                             <option value="male">Male</option>
